# ganesha

./: .env.beta  .env.local  .env.test  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.beta.yml  docker-compose.local.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  deploy_digital_ocean.yml  unit_tests.yml
ganesha/: collections.py  models.py
ganesha/auth/: login_utilities.py  models.py
ganesha/character/: models.py  routes.py
ganesha/coach/: models.py  routes.py
ganesha/core/: GaneshaBaseModel.py  email_service.py  gemini.py  mongo_database.py  validator.py
ganesha/health/: routes.py
ganesha/user/: models.py  otp_types.py  roles.py  routes.py
tests/: conftest.py  test_main.py
tests/character/: conftest.py  test_get_model.py  test_get_model_camera_settings.py  test_get_model_list.py  test_remove_model.py  test_save_model.py
tests/coach/: conftest.py  test_chat_with_ganesha.py  test_chat_with_ganesha_voice.py  test_get_daily_advice.py  test_process_audio.py  test_recognize_me.py
tests/coach/histories/: 66a4eafe39d1882b92cd5ca6-history.json
tests/user/: conftest.py  test_check_otp.py  test_delete_user.py  test_get_user.py  test_renew_password.py  test_send_forgot_otp.py  test_update_user.py  test_user_login.py  test_user_register.py
web-page/: index.html
web-page/css/: main.css
