[tool.poetry]
name = "ganesha"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.8.2"
pymongo = "^4.8.0"
pytest = "^8.2.2"
httpx = "^0.27.0"
faker = "^26.0.0"
fastapi-jwt = "^0.3.0"
python-multipart = "^0.0.9"
google-generativeai = "0.7.0"
authlib = "^1.3.1"
pyt2s = "^0.0.4"
faker-file = {extras = ["common"], version = "^0.17.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
